# skellect

./: README.md  skellect.cabal  t.sh
benchmark/: Bench.hs  SkellectBench.hs
executable/: Main.hs
test-suite/: AppStateSpec.hs  HLint.hs  ListZipperSpec.hs  ScoreSpec.hs  SelectionListSpec.hs  SelectionSeqSpec.hs  SkellectSpec.hs  UtilSpec.hs
