name:          skellect
version:       0.0.0
build-type:    Simple
cabal-version: >= 1.18

library
    default-language: Haskell2010
    exposed-modules:  Skellect
    hs-source-dirs:   library
    build-depends:    base

executable skellect
    default-language: Haskell2010
    build-depends:    base, skellect
    hs-source-dirs:   executable
    main-is:          Main.hs

test-suite hspec
    default-language: Haskell2010
    build-depends: base, skellect, hspec
    hs-source-dirs: test-suite
    main-is: Spec.hs
    type: exitcode-stdio-1.0

