name:                 skellect
version:              0.0.0
build-type:           Simple
cabal-version:        >= 1.18

library
    hs-source-dirs:   library
    build-depends:    base
    ghc-options:      -Wall
    exposed-modules:  Skellect
    default-language: Haskell2010

executable skellect
    hs-source-dirs:   executable
    build-depends:    base, skellect
    main-is:          Main.hs
    ghc-options:      -Wall
    default-language: Haskell2010

test-suite hlint
    hs-source-dirs:   test-suite
    build-depends:    base, hlint
    main-is:          HLint.hs
    ghc-options:      -Wall
    type:             exitcode-stdio-1.0
    default-language: Haskell2010

test-suite hspec
    hs-source-dirs:   test-suite
    build-depends:    base, skellect, hspec, QuickCheck
    main-is:          Spec.hs
    ghc-options:      -Wall
    type:             exitcode-stdio-1.0
    default-language: Haskell2010

benchmark criterion
    hs-source-dirs:   benchmark
    build-depends:    base, skellect, criterion
    main-is:          Bench.hs
    ghc-options:      -Wall
    type:             exitcode-stdio-1.0
    default-language: Haskell2010

